--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -239,3 +239,123 @@
 
             <!-- AJOUT : Maître du temps -->
             <a href="maitre_du_temps.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="clock" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Maître du temps</h2>
+            </a>
+
+            <a href="cubes_construction.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="box" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Cubes Construction</h2>
+            </a>
+
+            <a href="gabarits_angles.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="triangle" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Gabarits Angles</h2>
+            </a>
+
+            <a href="moyennes.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="bar-chart-3" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Moyennes</h2>
+            </a>
+
+            <a href="stats_city.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="activity" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Stats city</h2>
+            </a>
+
+            <a href="ratio.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="divide" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Ratio</h2>
+            </a>
+
+            <!-- TUILES ALGÉBRIQUES -->
+            <a href="tuiles_algebriques.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <!-- SVG personnalisé : petit carré + rectangle -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                         class="lucide-main">
+                        <rect x="2" y="14" width="8" height="8" rx="1"/>
+                        <rect x="12" y="2" width="8" height="20" rx="1"/>
+                    </svg>
+                </div>
+                <h2 class="card-title">Tuiles algébriques</h2>
+            </a>
+
+            <a href="tuiles_algebriques_mode_equation.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <!-- SVG personnalisé : tuiles = tuiles -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                         class="lucide-main">
+                        <!-- bloc gauche -->
+                        <rect x="2" y="4" width="6" height="10" rx="1"/>
+                        <rect x="2" y="16" width="6" height="6" rx="1"/>
+
+                        <!-- égal -->
+                        <line x1="10.5" y1="11" x2="13.5" y2="11"/>
+                        <line x1="10.5" y1="13" x2="13.5" y2="13"/>
+
+                        <!-- bloc droit -->
+                        <rect x="16" y="4" width="6" height="10" rx="1"/>
+                        <rect x="16" y="16" width="6" height="6" rx="1"/>
+                    </svg>
+
+                    <div class="construction-badge"><i data-lucide="hammer"></i></div>
+                </div>
+                <h2 class="card-title">Tuiles équations</h2>
+            </a>
+
+            <a href="unités d'aires.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="maximize" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Unités d'Aires</h2>
+            </a>
+
+            <a href="glisse_entiers_flex.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="move" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Glisse entiers</h2>
+            </a>
+
+            <a href="glisse_nombres_decimaux.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="move" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Glisse nombres décimaux</h2>
+            </a>
+
+            <a href="conversions.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <i data-lucide="arrow-left-right" class="lucide-main"></i>
+                </div>
+                <h2 class="card-title">Conversions</h2>
+            </a>
+
+        </div>
+
+    </div>
+
+    <footer>
+        <!-- Pied de page -->
+    </footer>
+
+    <script>
+        lucide.createIcons();
+    </script>
+</body>
+</html>
