--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -237,6 +237,24 @@
                 <h2 class="card-title">Bandes de fractions</h2>
             </a>
 
+            <!-- AJOUT : Disques de fractions -->
+            <a href="disque_fractions.html" class="choice-card">
+                <div class="icon-wrapper">
+                    <!-- SVG personnalisé : disque fractionné -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                         class="lucide-main">
+                        <circle cx="12" cy="12" r="9"/>
+                        <!-- 4 quarts -->
+                        <line x1="12" y1="3" x2="12" y2="21"/>
+                        <line x1="3" y1="12" x2="21" y2="12"/>
+                        <!-- petit arc pour suggérer une part -->
+                        <path d="M12 12 L12 3 A9 9 0 0 1 21 12 Z"/>
+                    </svg>
+                </div>
+                <h2 class="card-title">Disques de fractions</h2>
+            </a>
+
             <!-- AJOUT : Maître du temps -->
             <a href="maitre_du_temps.html" class="choice-card">
                 <div class="icon-wrapper">
