--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -336,7 +336,7 @@
                 <h2 class="card-title">Tuiles équations</h2>
             </a>
 
-            <a href="unités d'aires.html" class="choice-card">
+            <a href="unites_d_aires.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="maximize" class="lucide-main"></i>
                 </div>
