--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -318,7 +318,7 @@
                 <h2 class="card-title">Cubes Construction</h2>
             </a>
 
-            <a href="disque_fractions.html" class="choice-card" data-tags="fractions camembert">
+            <a href="disques_fractions.html" class="choice-card" data-tags="fractions camembert">
                 <div class="icon-wrapper">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <circle cx="12" cy="12" r="9"/>
@@ -365,7 +365,7 @@
                     <svg viewBox="0 0 24 24" fill="none">
                         <circle cx="7" cy="12" r="4.5" fill="#ef4444" /> <circle cx="17" cy="12" r="4.5" fill="#22c55e" /> </svg>
                 </div>
-                <h2 class="card-title">Relatifs : Découverte</h2>
+                <h2 class="card-title">Relatifs 1 : Découverte</h2>
             </a>
 
             <a href="nombres_relatifs_somme_differenceB.html" class="choice-card" data-tags="relatifs automatique">
@@ -376,7 +376,7 @@
                          <polygon points="17 2 17 10 23 10 15 22 15 14 9 14 17 2" />
                     </svg>
                 </div>
-                <h2 class="card-title">Relatifs : Méthode auto</h2>
+                <h2 class="card-title">Relatifs 2 : Méthode auto</h2>
             </a>
 
             <a href="nombres_relatifs_somme_differenceC.html" class="choice-card" data-tags="relatifs opposé">
@@ -390,7 +390,7 @@
                         <path d="M16 13l-4 3 4 3" />
                     </svg>
                 </div>
-                <h2 class="card-title">Relatifs : Opposé</h2>
+                <h2 class="card-title">Relatifs 3 : Opposé</h2>
             </a>
 
             <a href="nombres_relatifs_somme_differenceD.html" class="choice-card" data-tags="relatifs parentheses">
@@ -400,7 +400,7 @@
                         <circle cx="15.5" cy="12" r="3.5" fill="#22c55e" stroke="none" />
                     </svg>
                 </div>
-                <h2 class="card-title">Relatifs : Parenthèses</h2>
+                <h2 class="card-title">Relatifs 4 : Parenthèses</h2>
             </a>
 
             <a href="stats_city.html" class="choice-card" data-tags="donnees graphiques">
