--- a/outils/index.html
+++ b/outils/index.html
@@ -186,11 +186,11 @@ footer {
       <p class="card-desc">Générateur de schémas et de problèmes mathématiques.</p>
     </a>
 
-    <!-- 5. Relatifs -->
+    <!-- 5. Relatifs
     <a class="card" href="relatifs/" data-color="relatifs">
       <div class="card-title">🔴🟢 Relatifs</div>
       <p class="card-desc">Activités de manipulation pour appréhender les nombres relatifs.</p>
-    </a>
+    </a> -->
 
   </section>
   
