--- a/outils/fabrication_materiel/bandes_maker_v2.html
+++ b/outils/fabrication_materiel/bandes_maker_v2.html
@@ -317,8 +317,8 @@
                 <label>Style des fonds</label>
                 <select id="colorMode">
                     <option value="white">Uniforme blanc - pour papier coloré</option>
-                    <option value="colored_gwenael" selected>Couleur pédagogique</option>
-                    <option value="colored_montessori">Couleur pédagogique (Style Montessori)</option>
+                    <option value="colored_gwenael" selected>Couleurs pédagogiques</option>
+                    <option value="colored_montessori">Couleurs pédagogiques (Style Montessori)</option>
                 </select>
 
                 <div class="row">
