--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -430,7 +430,7 @@
                     </svg>
                     <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
-                <h2 class="card-title">Tuiles équations</h2>
+                <h2 class="card-title">Tuiles ax+b=cx+d</h2>
             </a>
 
             <a href="unites_aires.html" class="choice-card" data-tags="mesures aire surface">
